# agentflow-v2

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  auth_providers.py  docker-compose.yml  docker_integration.py  github_integration.py  requirements.txt  server.py  setup.sh
backend/: Dockerfile  main.py  requirements.txt
backend/agents/: base.py  orchestrator.py  specialists.py
backend/core/: cloud_manager.py  config.py  ollama_manager.py
backend/mcp/: manager.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
litellm/: config.yaml
nginx/: nginx.conf
openclaw/: README.md  pyproject.toml
openclaw/openclaw/: __init__.py  cli.py  config.py  core.py  terminal.py  tui.py
scripts/: init-db.sql
