[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openclaw"
version = "1.0.0"
description = "Local-first agentic coding CLI powered by Ollama — Claude Code for local LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AgentFlow", email = "dev@agentflow.local" }]
keywords = ["llm", "ollama", "coding", "agent", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.scripts]
openclaw = "openclaw.cli:main"
claw     = "openclaw.cli:main"

[project.urls]
Homepage   = "https://github.com/adrianstanca1/agentflow-v2"
Repository = "https://github.com/adrianstanca1/agentflow-v2"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw*"]

[tool.ruff]
line-length = 100
target-version = "py310"
